--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -64,7 +64,7 @@ xmlns:l="sap.ui.layout">
 				<f:content>
 					<Page class="pgDashboard" showHeader="false" id="contentDashboard">
 						<content>
-							<!-- <GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Total Leads" press="getTotalLeadsDetail">
+							<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Total Leads" press="getTotalLeadsDetail">
 								<TileContent footer="">
 									<NumericContent truncateValueTo="20" value="{dashBoard_oModel>/leadcount}" valueColor="Good" withMargin="false" />
 								</TileContent>
@@ -83,14 +83,14 @@ xmlns:l="sap.ui.layout">
 								<TileContent unit="" footer="">
 									<NumericContent truncateValueTo="20" value="{dashBoard_oModel>/projectcount}" valueColor="Error" withMargin="false" />
 								</TileContent>
-							</GenericTile> -->
+							</GenericTile>
 
-							<core:HTML id="ganttContainer" content="
+							<!-- <core:HTML id="ganttContainer" content="
 								&lt;div id='gantt_here' style='width:100%; height:100%;'&gt;&lt;/div&gt;
 								&lt;script type='text/javascript'&gt;
 								gantt.init('gantt_here');
 								&lt;/script&gt;">
-							</core:HTML>
+							</core:HTML> -->	 
 						</content>		
 					</Page>
 				</f:content>
